fixed padding when viewing on mobile blog posts

--- a/public/css/less/blog.less
+++ b/public/css/less/blog.less
@@ -110,6 +110,9 @@
 		display:inline-block;
 		float:none;
 	}
+	.shrink {
+		padding:0;
+	}
 }
 @media (max-width:700) {
 	.post .info .tags {
